--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:h2:mem:testdb
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.properties.hibernate.show_sql=false
